Multi level main activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/notes_activity"
-    tools:context="com.example.ernestchechelski.jwmarkdownnotes.MainActivity">
+    tools:context="com.example.ernestchechelski.jwmarkdownnotes.MainListActivity">
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
